RESOLVED FIXED301504
REGRESSION(301763@main) Crash under HTMLDialogElement::showModal()
https://bugs.webkit.org/show_bug.cgi?id=301504
Summary REGRESSION(301763@main) Crash under HTMLDialogElement::showModal()
Anne van Kesteren
Reported 2025-10-27 00:44:41 PDT
.
Attachments
Anne van Kesteren
Comment 1 2025-10-27 00:44:43 PDT
Anne van Kesteren
Comment 2 2025-10-27 00:46:25 PDT
EWS
Comment 3 2025-10-27 02:46:02 PDT
Committed 302181@main (a6ca9248acbc): <https://commits.webkit.org/302181@main> Reviewed commits have been landed. Closing PR #53026 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.