REGRESSION(301763@main) Crash under HTMLDialogElement::showModal() https://bugs.webkit.org/show_bug.cgi?id=301504 rdar://163369766

Reviewed by Ryosuke Niwa.

Reduce scope of containingBlockBeforeStyleResolution variable to what's
strictly needed as it's a CheckedPtr.

Canonical link: https://commits.webkit.org/302181@main